--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         const avgHumEl = document.getElementById('avgHum');
         const ctx = document.getElementById('lineChart').getContext('2d');
 
-        const NGROK_URL = "https://da8c-175-107-221-10.ngrok-free.app";  // <- Set your Ngrok URL here
+        const NGROK_URL = "https://ca64-175-107-221-10.ngrok-free.app";  // <- Set your Ngrok URL here
 
         const chart = new Chart(ctx, {
             type: 'line',
