--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         const avgHumEl = document.getElementById('avgHum');
         const ctx = document.getElementById('lineChart').getContext('2d');
 
-        const NGROK_URL = "https://ca64-175-107-221-10.ngrok-free.app";  // <-- your correct NGROK URL
+        const NGROK_URL = "https://b0d6-175-107-221-10.ngrok-free.app";  // <-- your correct NGROK URL
 
         const chart = new Chart(ctx, {
             type: 'line',
